--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,9 @@
 <h1>Sign Up Below:</h1>
+<form action="/registrations" method="POST">
+<label>Name:<input type="text" name="name" id="name"></label>
+<label>Email:<input type="text" name="email" id="email"></label>
+<label>Password:<input type="text" name="password" id="password"></label>
+<input type="submit" name="submit" value="Sign Up">
+</form>
 
 
